Fri Dec  3 17:31:47 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/DocumentRef.cc(Clear): Set docHopCount & docSig to 0,
	and clear docEmail, docNotification & docSubject strings to have
	a clean slate for Deserialize(), which assume 0/empty for these.
	Fixes problem with hop counts getting clobbered.
	* htdoc/RELEASE.html: Update with latest fix.
	* htdoc/ChangeLog: Update to latest version.

Fri Dec  3 12:12:19 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc: removed vestiges of internal Postscript
	support that never worked, and removed test for application/msword,
	which is handled only by external parser.
	* htdig/Makefile.in: removed Postscript.o from list.
	* htdig/Retriever.cc(parse_url): Fix compilation error;
	(Initial, got_href, got_redirect): Try to get the local filename
	for a server's robots.txt file and pass it along to the newly
	generated server.
	* htdig/Server.cc(Server): Retrieve the robots.txt file from the
	filesystem when possible; fix compilation error.
	* htdig/Server.h(Server): Add local_robots_file parameter to Server().
	* htlib/HtWordType.h, htlib/HtWordType.cc: fix compilation errors.

Fri Dec  3 10:52:57 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc(parse, do_tag): Add handling of <img alt=...> text,
	fix parsing of words in meta tags, disable indexing of meta tags
	when "noindex" state in effect, fix calculations of word positions
	to more accurately reflect relative positions.
	* htlib/HtWordType.h, htlib/HtWordType.cc: Add HtWordToken() function,
	to replace strtok() in HTML parser.
	* htdoc/RELEASE.html: Update with latest fixes.

Fri Dec  3 09:02:55 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/Configuration(Add): handle strings in single quotes, as in
	parm='value'.

Thu Dec  2 16:14:28 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html: Add Tom Metro's suggested revisions for pdf_parser
	and external_parsers.
