@@ -22,7 +22,7 @@
 	</p>
 
 	<p>
-	<strong>Release notes for htdig-3.1.4</strong> 3 Dec 1999<br>
+	<strong>Release notes for htdig-3.1.4</strong> 6 Dec 1999<br>
 	This version cleans up some remaining bugs in the 3.1.3
 	release. As the latest stable release of ht://Dig, it is
 	recommended for all production servers.
@@ -54,6 +54,7 @@
 	    attribute is now extended to support external converters, to avoid
 	    a lot of the complications of writing external parsers.</li>
 	<li>Added support for several new configuration attributes:
+	    <a href="attrs.html#authorization">authorization</a>,
 	    <a href="attrs.html#start_highlight">start_highlight</a>,
 	    <a href="attrs.html#end_highlight">end_highlight</a>,
 	    <a href="attrs.html#local_urls_only">local_urls_only</a>,
@@ -1092,7 +1093,7 @@
 	  <a href="author.html">Andrew Scherpbier &lt;andrew@contigo.com&gt;</a>
 	</address>
 <!-- hhmts start -->
-Last modified: Fri Dec  3 18:31:28 EST 1999
+Last modified: Mon Dec  6 16:52:29 EST 1999
 <!-- hhmts end -->
   </body>
 </html>
